# SMJW_Eng

./: CMakeLists.txt  README.md
resources/: simple.frag  simple.vert
resources/shaders/: simpleBlue.frag  simpleGreen.frag  simpleRed.frag
src/Eng/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Eng.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  Keyboard.cpp  Keyboard.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  dummy.cpp  stb_image.h
src/Game/: Renderer.h  TestScene.cpp  TestScene.h  TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
